finish load biger picture function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name="com.avos.avoscloud.feedback.ThreadActivity" >
         </activity>
         <!-- 反馈组件 END -->
-
+        <activity android:name=".View.Activity.MingPictureGalleryItemActivity"/>
     </application>
 
 </manifest>
