--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     compile ('cn.leancloud.android:avoscloud-search:v3.+@aar')
 
 
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    //Optional: see how to use the utility.
+    compile 'com.ogaclejapan.smarttablayout:utils-v13:1.6.1@aar'
+
+
 }
 
 
